--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "my-app",
+  "name": "scm-design-system-cra",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hellofresh/scm-design-system": "^0.1.0",
+    "@hellofresh/scm-design-system": "^0.2.5",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -11,11 +11,12 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.13",
+    "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router": "^5.1.17",
     "@types/styled-components": "^5.1.18"
   }
 }
