--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,6 +11,7 @@ jobs:
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - run: echo "🧑‍💻 GH HEAD ref ${{ github.head_ref }}."
       - run: echo "🧑‍💻 GH BASE base ${{ github.base_ref }}."
+      - run: echo "🧑‍💻 GH ${{ github.context.payload.pull_request }}."
       - name: Check out repository code
         uses: actions/checkout@v2
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
