--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,6 +13,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Use Node.js 16
         uses: actions/setup-node@v2
         with:
@@ -30,4 +31,8 @@ jobs:
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
-      - run: npm run build --if-present
+      - name: Check PR
+        run: npm run check:pr:title
+
+      - name: Build packages
+        run: npm run build --if-present
