--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@actions/core": "^1.6.0",
+    "@actions/github": "^5.0.0",
     "@hellofresh/scm-design-system": "^0.2.8-alpha.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
