--- a/.github/workflows/check-pr-title.yml
+++ b/.github/workflows/check-pr-title.yml
@@ -7,8 +7,8 @@ on:
   pull_request:
     types: [opened]
     branches: [main]
-  pull_request_review:
-    types: [submitted]
+  # pull_request_review:
+  #   types: [submitted]
 
 jobs:
   build:
