--- a/.github/workflows/check-pr-title.yml
+++ b/.github/workflows/check-pr-title.yml
@@ -1,4 +1,4 @@
-# This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# This workflow will do a clean install of node dependencies, cache/restore them and test the PR Title to enforce consistency
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 name: Check PR Title
@@ -24,7 +24,7 @@ jobs:
           node-version: "16"
           cache: "npm"
 
-      - name: Install packages
+      - name: Install npm packages
         run: npm i @actions/core @actions/github
 
       - name: Check PR
