--- a/.github/workflows/check-source-code.yml
+++ b/.github/workflows/check-source-code.yml
@@ -31,8 +31,5 @@ jobs:
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
-      - name: Check PR
-        run: npm run check:pr:title
-
-      - name: Build packages
+      - name: Build project
         run: npm run build --if-present
