--- a/.github/workflows/check-pr-title.yml
+++ b/.github/workflows/check-pr-title.yml
@@ -5,14 +5,13 @@ name: Check PR Title
 
 on:
   pull_request:
-    types: [opened, synchronize]
     branches: [main]
   pull_request_review:
     types: [submitted]
     branches: [main]
 
 jobs:
-  valid_regex:
+  validate_regex:
     # if: github.event.review.state == 'approved'
     runs-on: ubuntu-latest
 
@@ -28,5 +27,5 @@ jobs:
       - name: Install npm packages
         run: npm i @actions/core @actions/github
 
-      - name: Check PR
+      - name: Check PR title
         run: node scripts/check-pr-title
