--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hellofresh/scm-design-system": "^0.2.6",
+    "@actions/core": "^1.6.0",
+    "@actions/github": "^5.0.0",
+    "@hellofresh/scm-design-system": "^0.2.8-alpha.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -23,6 +25,7 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
+    "check:pr:title": "node scripts/check-pr-title",
     "create:npmrc": "node scripts/create-npmrc",
     "start": "react-scripts start",
     "build": "react-scripts build",
