--- a/.github/workflows/trigger-master-release.yml
+++ b/.github/workflows/trigger-master-release.yml
@@ -18,13 +18,17 @@ on:
 
 jobs:
   release_staging:
+    if: ${{ github.event.inputs.hf-env == 'staging' }}
     runs-on: ubuntu-latest
 
     steps:
       - name: Release to staging
-        if: ${{ github.event.inputs.hf-env == 'staging' }}
         run: echo STAG "${{ fromJSON('["", "🥳"]')[github.event.inputs.use-emoji == 'true'] }} ${{ github.event.inputs.hf-env }}"
 
+  release_production:
+    if: ${{ github.event.inputs.hf-env == 'production' }}
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Release to production
-        if: ${{ github.event.inputs.hf-env == 'production' }}
         run: echo PROD "${{ fromJSON('["", "🥳"]')[github.event.inputs.use-emoji == 'true'] }} ${{ github.event.inputs.hf-env }}"
